# Kraxmas

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Kraxmas.sln  OpenTD.sln  README.md  project.godot  readme.md
Kraxmas.Android/: Game1.cs  Kraxmas.Android.csproj  MainActivity.cs
Kraxmas.Core/: MainGame.cs
Kraxmas.Desktop/: Game1.cs  Kraxmas.Desktop.csproj  Program.cs  app.manifest
Kraxmas.LevelEditor/: LevelEditor.cs  MainPanel.cs  Program.cs  Widgets.cs  app.manifest  readme.md
OpenTD.Android/: MainActivity.cs  OpenTD.Android.csproj
OpenTD.Common/: Version.cs
OpenTD.Core/: MainGame.cs  OpenTD.Core.csproj
OpenTD.Desktop/: OpenTD.Desktop.csproj  Program.cs  app.manifest
OpenTD.LevelEditor/: LevelEditor.cs  MainPanel.cs  Music.cs  MusicSelectDialog.cs  OpenTD.LevelEditor.csproj  Program.cs  app.manifest  readme.md
assets/: Logo.xcf  logo.icns
entities/: Bullet.cs  Bullet.tscn  Enemy.cs  Enemy.tscn  Tower.cs  Tower.tscn
maps/: Default.tscn  Main.cs  Main.tscn  Map1.tscn
music/: license  snowheart_melody.ogg.import  winter_walk.ogg.import
particles/: 16.png.import  pentagon.png.import
scene/: Explosion.tscn  Hud.cs  Hud.tscn  Main.cs  Main.tscn  MainMenu.cs  MainMenu.tscn  MessageScreen.cs  MessageScreen.tscn  Pause.cs  Pause.tscn  SceneBase.cs
sound/: upgrade.wav.import
src/: Colors.cs  Config.cs  MessageType.cs  SoundEffect.cs  application.hpp  color.rs  game.cpp  game.hpp  game.rs  game_state.rs  label.cpp  label.hpp  main.cpp  main.rs  res.hpp  scene.rs  style.rs  window.cpp  window.hpp
tiles/: panel_woodWear_blank.png.import  (+4 more)
(+52 files in other folders)
